processed/gerrit/txt_full/34497.txt
Change:     34497
Subject:    LU-6142 ldlm: Fix style issues for ldlm_pool.c
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/34497
Change-Id:  Iee850badeced8ad4edcb4a75bfd2daca0f508c2a
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Arshad Hussain
Created:    2019-03-24 02:56:00.000000000
Updated:    2019-04-08 05:31:54.000000000
Patch Set:  3
Insertions: +302
Deletions:  -295
Comments:   3 (0 unresolved)

--- Labels ---
  Code-Review: Andreas Dilger: +2; Ben Evans: +1
  Verified: Jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Jenkins, Oleg Drokin, Andreas Dilger, James Simmons, Ben Evans

--- Commit Message ---
LU-6142 ldlm: Fix style issues for ldlm_pool.c

This patch fixes issues reported by checkpatch
for file lustre/ldlm/ldlm_pool.c

Change-Id: Iee850badeced8ad4edcb4a75bfd2daca0f508c2a
Test-Parameters: trivial
Signed-off-by: Arshad Hussain <arshad.super@gmail.com>
Reviewed-on: https://review.whamcloud.com/34497
Tested-by: Jenkins
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Ben Evans <bevans@cray.com>

--- Review History ---

--- Message (Arshad Hussain, 2019-03-24 02:56:00.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2019-03-24 02:59:01.000000000) ---
Patch Set 1:

(2 comments)

2 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-03-24 03:03:22.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c: In function ‘ldlm_pool_shrink’:
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c:643:4: error: ‘i’ undeclared (first use in this function)
     i      cancel);
     ^
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c:643:4: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c:643:11: error: expected ‘)’ before ‘cancel’
     i      cancel);
            ^
 /home/green/git/lustre-release/lustre/ptlrpc/../../lustre/ldlm/ldlm_pool.c: At top level:
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Arshad Hussain, 2019-03-24 03:07:32.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2019-03-24 03:09:13.000000000) ---
Patch Set 2:

(1 comment)

1 style warning(s).
For more details please see http://wiki.lustre.org/Lustre_Coding_Style_Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2019-03-24 03:14:25.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Jenkins, 2019-03-24 03:25:14.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/4184/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/62726/ : FAILURE

--- Message (Jenkins, 2019-03-24 03:39:06.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/4185/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/62727/ : SUCCESS

--- Message (Autotest, 2019-03-24 03:39:39.000000000) ---
Patch Set 2:

AT Release Candidate started enforced review-ldiskfs session.

--- Message (Maloo, 2019-03-24 06:08:33.000000000) ---
Patch Set 2: Verified+1

Passed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by AT Release Candidate from trevis-66vm1: https://testing.whamcloud.com/test_sessions/7b14cd78-709a-4f8d-96a3-f9126916138a ran 4 tests.

--- Message (Andreas Dilger, 2019-03-24 09:34:59.000000000) ---
Patch Set 2: Code-Review+2

--- Message (Ben Evans, 2019-03-25 20:11:27.000000000) ---
Patch Set 2: Code-Review+1

--- Message (unknown, 2019-04-08 05:31:54.000000000) ---
Change has been successfully cherry-picked as c9d03eb6d6026047983f2cb293f72aa9a7bdbb28 by Oleg Drokin
